# CAD_to_OpenMC

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Assembly.py  CHANGELOG.md  LICENSE  README.md  assembly.py  bibliography.bib  paper.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_Assembly.py
.github/workflows/: micromamba-install.yml  pipbuild.yml  python-app-full.yml  python-app.yml  run_openmc_tests.yml
docs/: api.rst  conf.py  environment.yml  index.rst  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  install.md  usage.md  usage.rst
examples/: create_mesh_sample.py  oblate_ellipsoids.step  pincell1.step  reactor_test1.step  spheroids.step  toroids.step
examples/godiva_iv/: GIV_BR_detailed.step  GIV_BR_simplified.step  GIV_CR_detailed.step  GIV_CR_simplified.step  GIV_core_detailed.step  GIV_core_simplified.step  build_model_detailed.py  build_model_simplified.py  step_to_h5m.py
examples/step_files/: pincell2.step
scripts/: c2omc_crashtest.py  c2omc_step2h5m.py  step2h5m.py
src/CAD_to_OpenMC/: __init__.py  assembly.py  assemblymesher.py  assemblymesher_base.py  assemblymesher_cq.py  assemblymesher_cq2.py  assemblymesher_db.py  assemblymesher_gmsh.py  check_step.py  cq_serialize.py  datadirectory.py  h5m.py  meshutils.py  stl_utils.py
src/h5massembly/: assembly.py  assemblymesher.py  assemblymesher_cq.py  assemblymesher_gmsh.py  assemblymeshers.py
support/: gmsh_mesh_check.py  step2step.py
test/: test_Assembly.py
tests/: OMC_DAGMC_run.py  harnessRun.py  testRun.py  test_OMC_DAGMC.py  test_cqstl.py  test_cqstl2.py  test_db.py  test_gmsh.py  test_self_contained.py  test_tags.py  test_transform.py
tests/nuclear_data_testlib/: H1.h5  H2.h5  H3.h5  O17.h5  O18.h5  U231.h5  cross_sections.xml
