[metadata]
name = h5massembly
version = 0.0.5
author = Erik B Knudsen
author_email = erik.knudsen@copenhagenatomics.com
description = Package to automagically convert step-gometries to h5m descriptions for neutronics by OpenMC 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openmsr/step_to_h5m
project_urls =
    Bug Tracker = https://github.com/openmsr/step_to_h5m/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires=
        gmsh
        cadquery2
        numpy
        OCP
        pathlib
        typing
        meshio
        trimesh
        pymoab

[options.packages.find]
where = src
